--- a/notebooks/nb_75_env_engineering.ipynb
+++ b/notebooks/nb_75_env_engineering.ipynb
@@ -1,22 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Only needed on colab or on a fresh setup\n",
-    "# Won't work on Windows!\n",
-    "!pip install -r requirements.txt\n",
-    "!apt-get install -y xvfb python-opengl ffmpeg > /dev/null 2>&1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -123,9 +107,9 @@
    "source": [
     "import logging\n",
     "\n",
-    "from gym.envs.classic_control import PendulumEnv\n",
-    "from gym.wrappers import TimeLimit\n",
-    "from visualization import demo_model, ModelProtocol"
+    "from gymnasium.envs.classic_control import PendulumEnv\n",
+    "from gymnasium.wrappers import TimeLimit\n",
+    "import numpy as np"
    ]
   },
   {
@@ -143,37 +127,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "class PushRightModel(ModelProtocol):\n",
-    "    def predict(self, observation: np.ndarray, **kwargs):\n",
-    "        return np.array([env.max_torque]), None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "demo_model(env, PushRightModel(), num_steps=800, in_notebook=in_notebook)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -182,82 +135,6 @@
    },
    "source": [
     "One can easily define human-designed agents, they can serve as simple benchmarks, and it is often a good idea to start an RL project with them."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Manipulating environments\n",
-    "\n",
-    "Let us see what happens if we increase gravity and keep pushing to the right with the maximal torque"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(\"initial g: \" + str(env.g))\n",
-    "env.g = 20\n",
-    "print(\"modified g: \" + str(env.g))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "demo_model(env, PushRightModel(), num_steps=800, in_notebook=in_notebook)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "Huh, nothing changed? Gotcha!\n",
-    "The reason is a very funny behaviour of gym wrappers that took me hours to find for the first time: *getattr* is overridden but *setattr* is not!\n",
-    "This causes creation of a new attribute in the wrapper instance shadowing the name of the (still unchanged) attribute in the wrapped environment.\n",
-    "\n",
-    "The quick solution here: unwrap and adjust g. The real solution in custom environments is to define setters like\n",
-    "\n",
-    "```python\n",
-    "    def set_g(self, g: float):\n",
-    "        self.g = g\n",
-    "```\n",
-    "for all quantities of interest and never to set attributes directly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "env.env.g = 20\n",
-    "demo_model(env, PushRightModel(), num_steps=800, in_notebook=in_notebook)"
    ]
   },
   {
@@ -297,8 +174,8 @@
    },
    "outputs": [],
    "source": [
-    "from gym import ObservationWrapper\n",
-    "from gym.spaces import Box\n",
+    "from gymnasium import ObservationWrapper\n",
+    "from gymnasium.spaces import Box\n",
     "\n",
     "\n",
     "class AddThetadotSquaredWrapper(ObservationWrapper):\n",
@@ -387,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "import gym\n",
+    "import gymnasium\n",
     "from typing import List\n",
     "from abc import ABC, abstractmethod\n",
     "\n",
@@ -415,13 +292,13 @@
     "\n",
     "class ScalarObservationWrapper(ObservationWrapper):\n",
     "    \"\"\"\n",
-    "    Wraps an environment and an ScalarObservation into a single, gym-compatible object. See docu of\n",
+    "    Wraps an environment and an ScalarObservation into a single, gymnasium-compatible object. See docu of\n",
     "    ScalarObservation for more details about the intended usage of this class.\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(\n",
     "        self,\n",
-    "        env: gym.Env,\n",
+    "        env: gymnasium.Env,\n",
     "        scalar_observation: ScalarObservation,\n",
     "    ):\n",
     "        super().__init__(env)\n",
@@ -585,7 +462,7 @@
    },
    "outputs": [],
    "source": [
-    "from gym import RewardWrapper\n",
+    "from gymnasium import RewardWrapper\n",
     "\n",
     "\n",
     "class CustomPendulumReward(RewardWrapper):\n",
@@ -635,7 +512,7 @@
    },
    "outputs": [],
    "source": [
-    "from gym.envs.classic_control.pendulum import angle_normalize\n",
+    "from gymnasium.envs.classic_control.pendulum import angle_normalize\n",
     "from typing import Tuple, Callable\n",
     "\n",
     "\n",
@@ -785,7 +662,7 @@
     "\n",
     "log = logging.getLogger(__name__)\n",
     "\n",
-    "EnvType = TypeVar(\"EnvType\", bound=gym.Env)\n",
+    "EnvType = TypeVar(\"EnvType\", bound=gymnasium.Env)\n",
     "\n",
     "\n",
     "class RewardMetric(ABC, Generic[EnvType]):\n",
