--- a/notebooks/nb_70_TrainingRLAgents.ipynb
+++ b/notebooks/nb_70_TrainingRLAgents.ipynb
@@ -373,7 +373,6 @@
     "from tianshou.highlevel.params.dist_fn import DistributionFunctionFactoryIndependentGaussians\n",
     "from tianshou.highlevel.params.policy_params import PPOParams\n",
     "from tianshou.highlevel.experiment import PPOExperimentBuilder\n",
-    "from examples.mujoco.mujoco_env import MujocoEnvFactory\n",
     "\n",
     "\n",
     "def train_ppo_agent(\n",
@@ -459,12 +458,16 @@
     "\n",
     "\n",
     "class PendulumEnvFactory(EnvFactory):\n",
+    "    def __init__(self, num_training_envs: int = 10, num_test_envs: int = 1):\n",
+    "        self.num_training_envs = num_training_envs\n",
+    "        self.num_test_envs = num_test_envs\n",
+    "    \n",
     "    def create_envs(\n",
-    "        self, num_training_envs, num_test_envs, config: PersistableConfigProtocol | None = None\n",
+    "        self, config: PersistableConfigProtocol | None = None\n",
     "    ) -> ContinuousEnvironments:\n",
     "        env = get_pendulum_env()\n",
-    "        train_envs = ShmemVectorEnv([get_pendulum_env] * num_training_envs)\n",
-    "        test_envs = ShmemVectorEnv([get_pendulum_env] * num_test_envs)\n",
+    "        train_envs = ShmemVectorEnv([get_pendulum_env] * self.num_training_envs)\n",
+    "        test_envs = ShmemVectorEnv([get_pendulum_env] * self.num_test_envs)\n",
     "        return ContinuousEnvironments(\n",
     "            env=env,\n",
     "            train_envs=train_envs,\n",
@@ -533,7 +536,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = pend_env.render()"
+    "demo_model(pend_env, get_action, 200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1\n",
+    "\n",
+    "As you see, the reward is not easily interpretable. In fact, it is composed of different quantities (do have a look at the source\n",
+    "code of the environment, it is also provided below). How would you go about evaluating an agent's performance? Think about an\n",
+    "evaluation strategy and put it into code. It might contain the average time needed until the pendulum is stabilized, the average\n",
+    "torque per unit time, the average angular distance travelled by the pendulum or other metrics you find interesting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sparse Rewards\n",
+    "\n",
+    "With the vanilla pendulum, the agent receives rewards continuously based on the angle. The reward also\n",
+    "contains information about the torque. What if we tried training with sparse rewards, where we motivate\n",
+    "the agent to move a pendulum to a certain angle-range as fast as possible and to leave it there?\n",
+    "\n",
+    "Since gym environments are not modular, we cannot easily modify the reward. We could follow the strategies\n",
+    "outlined before to change the reward (and in a real project this would be the way to go). However, for\n",
+    "educational purposes we will instead copy-paste gym's source code and simply modify it according to our needs\n",
+    "prior to each experiment."
    ]
   },
   {
@@ -542,7 +573,284 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f"
+    "from os import path\n",
+    "from typing import Optional\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "import gymnasium as gym\n",
+    "from gymnasium import spaces\n",
+    "from gymnasium.envs.classic_control import utils\n",
+    "from gymnasium.error import DependencyNotInstalled\n",
+    "\n",
+    "\n",
+    "DEFAULT_X = np.pi\n",
+    "DEFAULT_Y = 1.0\n",
+    "\n",
+    "\n",
+    "class CustomPendulumEnv(gym.Env):\n",
+    "    \"\"\"\n",
+    "    ## Description\n",
+    "\n",
+    "    The inverted pendulum swingup problem is based on the classic problem in control theory.\n",
+    "    The system consists of a pendulum attached at one end to a fixed point, and the other end being free.\n",
+    "    The pendulum starts in a random position and the goal is to apply torque on the free end to swing it\n",
+    "    into an upright position, with its center of gravity right above the fixed point.\n",
+    "\n",
+    "    The diagram below specifies the coordinate system used for the implementation of the pendulum's\n",
+    "    dynamic equations.\n",
+    "\n",
+    "    ![Pendulum Coordinate System](/_static/diagrams/pendulum.png)\n",
+    "\n",
+    "    -  `x-y`: cartesian coordinates of the pendulum's end in meters.\n",
+    "    - `theta` : angle in radians.\n",
+    "    - `tau`: torque in `N m`. Defined as positive _counter-clockwise_.\n",
+    "\n",
+    "    ## Action Space\n",
+    "\n",
+    "    The action is a `ndarray` with shape `(1,)` representing the torque applied to free end of the pendulum.\n",
+    "\n",
+    "    | Num | Action | Min  | Max |\n",
+    "    |-----|--------|------|-----|\n",
+    "    | 0   | Torque | -2.0 | 2.0 |\n",
+    "\n",
+    "\n",
+    "    ## Observation Space\n",
+    "\n",
+    "    The observation is a `ndarray` with shape `(3,)` representing the x-y coordinates of the pendulum's free\n",
+    "    end and its angular velocity.\n",
+    "\n",
+    "    | Num | Observation      | Min  | Max |\n",
+    "    |-----|------------------|------|-----|\n",
+    "    | 0   | x = cos(theta)   | -1.0 | 1.0 |\n",
+    "    | 1   | y = sin(theta)   | -1.0 | 1.0 |\n",
+    "    | 2   | Angular Velocity | -8.0 | 8.0 |\n",
+    "\n",
+    "    ## Rewards\n",
+    "\n",
+    "    The reward function is defined as:\n",
+    "\n",
+    "    *r = -(theta<sup>2</sup> + 0.1 * theta_dt<sup>2</sup> + 0.001 * torque<sup>2</sup>)*\n",
+    "\n",
+    "    where `$\\theta$` is the pendulum's angle normalized between *[-pi, pi]* (with 0 being in the upright position).\n",
+    "    Based on the above equation, the minimum reward that can be obtained is\n",
+    "    *-(pi<sup>2</sup> + 0.1 * 8<sup>2</sup> + 0.001 * 2<sup>2</sup>) = -16.2736044*,\n",
+    "    while the maximum reward is zero (pendulum is upright with zero velocity and no torque applied).\n",
+    "\n",
+    "    ## Starting State\n",
+    "\n",
+    "    The starting state is a random angle in *[-pi, pi]* and a random angular velocity in *[-1,1]*.\n",
+    "\n",
+    "    ## Episode Truncation\n",
+    "\n",
+    "    The episode truncates at 200 time steps.\n",
+    "\n",
+    "    ## Arguments\n",
+    "\n",
+    "    - `g`: acceleration of gravity measured in *(m s<sup>-2</sup>)* used to calculate the pendulum dynamics.\n",
+    "      The default value is g = 10.0 .\n",
+    "\n",
+    "    ```python\n",
+    "    import gymnasium as gym\n",
+    "    gym.make('Pendulum-v1', g=9.81)\n",
+    "    ```\n",
+    "\n",
+    "    On reset, the `options` parameter allows the user to change the bounds used to determine\n",
+    "    the new random state.\n",
+    "\n",
+    "    ## Version History\n",
+    "\n",
+    "    * v1: Simplify the math equations, no difference in behavior.\n",
+    "    * v0: Initial versions release (1.0.0)\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    metadata = {\n",
+    "        \"render_modes\": [\"human\", \"rgb_array\"],\n",
+    "        \"render_fps\": 30,\n",
+    "    }\n",
+    "\n",
+    "    def __init__(self, render_mode: Optional[str] = None, g=10.0, target_angle_range=(-np.pi / 5, np.pi / 5)):\n",
+    "        self.target_angle_range = target_angle_range\n",
+    "        self.max_speed = 8\n",
+    "        self.max_torque = 2.0\n",
+    "        self.dt = 0.05\n",
+    "        self.g = g\n",
+    "        self.m = 1.0\n",
+    "        self.l = 1.0\n",
+    "\n",
+    "        self.render_mode = render_mode\n",
+    "\n",
+    "        self.screen_dim = 500\n",
+    "        self.screen = None\n",
+    "        self.clock = None\n",
+    "        self.isopen = True\n",
+    "\n",
+    "        high = np.array([1.0, 1.0, self.max_speed], dtype=np.float32)\n",
+    "        # This will throw a warning in tests/envs/test_envs in utils/env_checker.py as the space is not symmetric\n",
+    "        #   or normalised as max_torque == 2 by default. Ignoring the issue here as the default settings are too old\n",
+    "        #   to update to follow the gymnasium api\n",
+    "        self.action_space = spaces.Box(\n",
+    "            low=-self.max_torque, high=self.max_torque, shape=(1,), dtype=np.float32\n",
+    "        )\n",
+    "        self.observation_space = spaces.Box(low=-high, high=high, dtype=np.float32)\n",
+    "\n",
+    "    def step(self, u):\n",
+    "        th, thdot = self.state  # th := theta\n",
+    "\n",
+    "        g = self.g\n",
+    "        m = self.m\n",
+    "        l = self.l\n",
+    "        dt = self.dt\n",
+    "\n",
+    "        u = np.clip(u, -self.max_torque, self.max_torque)[0]\n",
+    "        self.last_u = u  # for rendering\n",
+    "        costs = angle_normalize(th) ** 2 + 0.1 * thdot**2 + 0.001 * (u**2)\n",
+    "\n",
+    "        newthdot = thdot + (3 * g / (2 * l) * np.sin(th) + 3.0 / (m * l**2) * u) * dt\n",
+    "        newthdot = np.clip(newthdot, -self.max_speed, self.max_speed)\n",
+    "        newth = th + newthdot * dt\n",
+    "\n",
+    "        self.state = np.array([newth, newthdot])\n",
+    "\n",
+    "        if self.render_mode == \"human\":\n",
+    "            self.render()\n",
+    "        min_th, max_th = self.target_angle_range\n",
+    "        angle_cost = 0 if min_th < angle_normalize(th) < max_th else 1\n",
+    "        return self._get_obs(), -costs, False, False, {}\n",
+    "\n",
+    "    def reset(self, *, seed: Optional[int] = None, options: Optional[dict] = None):\n",
+    "        super().reset(seed=seed)\n",
+    "        if options is None:\n",
+    "            high = np.array([DEFAULT_X, DEFAULT_Y])\n",
+    "        else:\n",
+    "            # Note that if you use custom reset bounds, it may lead to out-of-bound\n",
+    "            # state/observations.\n",
+    "            x = options.get(\"x_init\") if \"x_init\" in options else DEFAULT_X\n",
+    "            y = options.get(\"y_init\") if \"y_init\" in options else DEFAULT_Y\n",
+    "            x = utils.verify_number_and_cast(x)\n",
+    "            y = utils.verify_number_and_cast(y)\n",
+    "            high = np.array([x, y])\n",
+    "        low = -high  # We enforce symmetric limits.\n",
+    "        self.state = self.np_random.uniform(low=low, high=high)\n",
+    "        self.last_u = None\n",
+    "\n",
+    "        if self.render_mode == \"human\":\n",
+    "            self.render()\n",
+    "        return self._get_obs(), {}\n",
+    "\n",
+    "    def _get_obs(self):\n",
+    "        theta, thetadot = self.state\n",
+    "        return np.array([np.cos(theta), np.sin(theta), thetadot], dtype=np.float32)\n",
+    "\n",
+    "    def render(self):\n",
+    "        if self.render_mode is None:\n",
+    "            assert self.spec is not None\n",
+    "            gym.logger.warn(\n",
+    "                \"You are calling render method without specifying any render mode. \"\n",
+    "                \"You can specify the render_mode at initialization, \"\n",
+    "                f'e.g. gym.make(\"{self.spec.id}\", render_mode=\"rgb_array\")'\n",
+    "            )\n",
+    "            return\n",
+    "\n",
+    "        try:\n",
+    "            import pygame\n",
+    "            from pygame import gfxdraw\n",
+    "        except ImportError as e:\n",
+    "            raise DependencyNotInstalled(\n",
+    "                \"pygame is not installed, run `pip install gymnasium[classic-control]`\"\n",
+    "            ) from e\n",
+    "\n",
+    "        if self.screen is None:\n",
+    "            pygame.init()\n",
+    "            if self.render_mode == \"human\":\n",
+    "                pygame.display.init()\n",
+    "                self.screen = pygame.display.set_mode(\n",
+    "                    (self.screen_dim, self.screen_dim)\n",
+    "                )\n",
+    "            else:  # mode in \"rgb_array\"\n",
+    "                self.screen = pygame.Surface((self.screen_dim, self.screen_dim))\n",
+    "        if self.clock is None:\n",
+    "            self.clock = pygame.time.Clock()\n",
+    "\n",
+    "        self.surf = pygame.Surface((self.screen_dim, self.screen_dim))\n",
+    "        self.surf.fill((255, 255, 255))\n",
+    "\n",
+    "        bound = 2.2\n",
+    "        scale = self.screen_dim / (bound * 2)\n",
+    "        offset = self.screen_dim // 2\n",
+    "\n",
+    "        rod_length = 1 * scale\n",
+    "        rod_width = 0.2 * scale\n",
+    "        l, r, t, b = 0, rod_length, rod_width / 2, -rod_width / 2\n",
+    "        coords = [(l, b), (l, t), (r, t), (r, b)]\n",
+    "        transformed_coords = []\n",
+    "        for c in coords:\n",
+    "            c = pygame.math.Vector2(c).rotate_rad(self.state[0] + np.pi / 2)\n",
+    "            c = (c[0] + offset, c[1] + offset)\n",
+    "            transformed_coords.append(c)\n",
+    "        gfxdraw.aapolygon(self.surf, transformed_coords, (204, 77, 77))\n",
+    "        gfxdraw.filled_polygon(self.surf, transformed_coords, (204, 77, 77))\n",
+    "\n",
+    "        gfxdraw.aacircle(self.surf, offset, offset, int(rod_width / 2), (204, 77, 77))\n",
+    "        gfxdraw.filled_circle(\n",
+    "            self.surf, offset, offset, int(rod_width / 2), (204, 77, 77)\n",
+    "        )\n",
+    "\n",
+    "        rod_end = (rod_length, 0)\n",
+    "        rod_end = pygame.math.Vector2(rod_end).rotate_rad(self.state[0] + np.pi / 2)\n",
+    "        rod_end = (int(rod_end[0] + offset), int(rod_end[1] + offset))\n",
+    "        gfxdraw.aacircle(\n",
+    "            self.surf, rod_end[0], rod_end[1], int(rod_width / 2), (204, 77, 77)\n",
+    "        )\n",
+    "        gfxdraw.filled_circle(\n",
+    "            self.surf, rod_end[0], rod_end[1], int(rod_width / 2), (204, 77, 77)\n",
+    "        )\n",
+    "\n",
+    "        fname = path.join(path.dirname(__file__), \"assets/clockwise.png\")\n",
+    "        img = pygame.image.load(fname)\n",
+    "        if self.last_u is not None:\n",
+    "            scale_img = pygame.transform.smoothscale(\n",
+    "                img,\n",
+    "                (scale * np.abs(self.last_u) / 2, scale * np.abs(self.last_u) / 2),\n",
+    "            )\n",
+    "            is_flip = bool(self.last_u > 0)\n",
+    "            scale_img = pygame.transform.flip(scale_img, is_flip, True)\n",
+    "            self.surf.blit(\n",
+    "                scale_img,\n",
+    "                (\n",
+    "                    offset - scale_img.get_rect().centerx,\n",
+    "                    offset - scale_img.get_rect().centery,\n",
+    "                ),\n",
+    "            )\n",
+    "\n",
+    "        # drawing axle\n",
+    "        gfxdraw.aacircle(self.surf, offset, offset, int(0.05 * scale), (0, 0, 0))\n",
+    "        gfxdraw.filled_circle(self.surf, offset, offset, int(0.05 * scale), (0, 0, 0))\n",
+    "\n",
+    "        self.surf = pygame.transform.flip(self.surf, False, True)\n",
+    "        self.screen.blit(self.surf, (0, 0))\n",
+    "        if self.render_mode == \"human\":\n",
+    "            pygame.event.pump()\n",
+    "            self.clock.tick(self.metadata[\"render_fps\"])\n",
+    "            pygame.display.flip()\n",
+    "\n",
+    "        else:  # mode == \"rgb_array\":\n",
+    "            return np.transpose(\n",
+    "                np.array(pygame.surfarray.pixels3d(self.screen)), axes=(1, 0, 2)\n",
+    "            )\n",
+    "\n",
+    "    def close(self):\n",
+    "        if self.screen is not None:\n",
+    "            import pygame\n",
+    "\n",
+    "            pygame.display.quit()\n",
+    "            pygame.quit()\n",
+    "            self.isopen = False\n",
+    "\n",
+    "\n",
+    "def angle_normalize(x):\n",
+    "    return ((x + np.pi) % (2 * np.pi)) - np.pi\n"
    ]
   },
   {
@@ -551,7 +859,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "traj = collect_trajectory(pend_env)"
+    "sparse_env = TimeLimit(CustomPendulumEnv(), max_episode_steps=100)"
    ]
   },
   {
@@ -560,7 +868,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "traj[0].frame"
+    "exp_result = train_ppo_agent(\n",
+    "    PendulumEnvFactory(), epoch=1, step_per_epoch=20000, training_num=10,test_num=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transferring to perturbed environments\n",
+    "\n",
+    "The environment assumes a fixed mass. What if were to apply the same agent on an env with a different mass?\n",
+    "Note that planning algorithms a la MPC would have no problem with this at all, their performance would not\n",
+    "go down as long as mass is included in the dynamics-model.\n",
+    "\n",
+    "Not so for the \"real RL\" agent:"
    ]
   },
   {
@@ -569,7 +892,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo_model(pend_env, \"random\", 200)"
+    "env = get_pendulum_env()\n",
+    "\n",
+    "\n",
+    "demo_model(env, get_action, num_steps=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The pendulum is balanced upright but an excessive amount of torque is being applied constantly.\n",
+    "How could we improve this situation?\n",
+    "\n",
+    "## Exercise 2\n",
+    "\n",
+    "Try the following: we randomize the pendulum's mass at reset of episodes and also add mass to the observations.\n",
+    "For that wou will again follow the *bad-practice* and modify the environment by overriding methods directly.\n",
+    "Don't do this in a real project! Part of the reason for doing it here is to highlight how cumbersome and fragile such\n",
+    "a software design becomes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3\n",
+    "\n",
+    "There are many possibilities to extend the experiments done above. You could try:\n",
+    "\n",
+    "    1. Also changing l and g and adding them to the observation.\n",
+    "    2. Normalizing all observations to lie within 0 and 1 (or at least between -1 and 1)\n",
+    "    3. What if we could not observe the angular velocity? Remove the velocity from the observation.\n",
+    "       This renders the decision process non-Markovian and partially observed.\n",
+    "       However, adding a single past observation is sufficient to restore the Markov property.\n",
+    "       Add a history of previous observations and actions to the environment. You can use\n",
+    "       gym's `FrameStack` and `FlattenObservation` wrappers for that."
    ]
   },
   {
@@ -665,5 +1023,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
