notebooks minor changes and new ones added.

--- a/notebooks/nb_120_IntroOfflineRL.ipynb
+++ b/notebooks/nb_120_IntroOfflineRL.ipynb
@@ -124,49 +124,11 @@
    "source": [
     "### References\n",
     "\n",
-    "[ Levine et.al '2021 - Offline Reinforcement Learning: Tutorial, Review,\n",
+    "[ Levine et. al. '2021 - Offline Reinforcement Learning: Tutorial, Review,\n",
     "and Perspectives on Open Problems ](https://arxiv.org/pdf/2005.01643.pdf)\n",
     "\n",
-    "[Prudencio et. al.' 2023 - A Survey on Offline Reinforcement Learning: Taxonomy, Review, and Open Problems ](https://arxiv.org/pdf/2203.01387.pdf)"
+    "[Prudencio et. al. ' 2023 - A Survey on Offline Reinforcement Learning: Taxonomy, Review, and Open Problems ](https://arxiv.org/pdf/2203.01387.pdf)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ToDo or not ToDo: \n",
-    "\n",
-    "- Add agenda!!\n",
-    "- Offline BCQ-CQL exercises TODO!!\n",
-    "- Exercise 6a --> improve it!! TODO!!\n",
-    "\n",
-    "- Create an enum with: POLICY_FILE = \"policy_final.pth\"\n",
-    "- Move notebooks to tfl repo --> PUSH ASAP!\n",
-    "- Q2. Also see: An example in page 8 of https://arxiv.org/pdf/2106.08909.pdf.\n",
-    "\n",
-    "\n",
-    "- Let's give a look to the structure of the code ...\n",
-    "- Give a look to BC with transformers\n",
-    "- How to measure safety when o.o.d data?\n",
-    "- Create an enum with: POLICY_FILE = \"policy_final.pth\"\n",
-    "- Add titles to the state-action distribution histograms!\n",
-    "- Check all arguments in tianshou trainings like: update_per_epoch ...?\n",
-    "- Use the code for more complicated training. Use BCQ as expert like 25 and behavioral \n",
-    "    clonning on the 25 trajectories.\n",
-    "- Fix all references"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
