--- a/notebooks/nb_150_Imitation_learning_theory.ipynb
+++ b/notebooks/nb_150_Imitation_learning_theory.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "**pros**: If you have expert dataset and you are not worry about safety (i.e. unexpected policy behavior in unknown states) this could be a a fast approach. \n",
     "\n",
-    "**cons**: In general we don't have access to expert data so this is one of the main issues, but even if we have we will have problems related with distributional shift between our clone policy and the provided dataset. We will se this in a moment in an exercise. Also many of the properties of the Minari datasets (see notebook ??) that could appear in reality cannot be handled with simple imitation learning approaches, like for instance the stiching propery. "
+    "**cons**: In general we don't have access to expert data so this is one of the main issues, but even if we have we will have problems related with distributional shift between our clone policy and the provided dataset. We will see this in a moment in an exercise. Also many of the properties of the Minari datasets (see exercise notebook) that could appear in reality cannot be handled with simple imitation learning approaches, like for instance the stitching property. "
    ]
   },
   {
@@ -92,9 +92,22 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.11.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
