--- a/notebooks/nb_190_Offline_rl_algorithms_I.ipynb
+++ b/notebooks/nb_190_Offline_rl_algorithms_I.ipynb
@@ -33,18 +33,19 @@
     }
    ],
    "source": [
-    "from training_rl.offline_rl.custom_envs.utils import Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper\n",
-    "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import ObstacleTypes\n",
-    "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv, RenderMode\n",
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import register_grid_envs\n",
     "import warnings\n",
     "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
     "import gymnasium as gym\n",
+    "from training_rl.offline_rl.custom_envs.utils import Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper\n",
+    "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import ObstacleTypes\n",
+    "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv\n",
     "from training_rl.offline_rl.offline_policies.policy_registry import PolicyName\n",
     "from training_rl.offline_rl.behavior_policies.behavior_policy_registry import BehaviorPolicyType\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import \\\n",
     "    create_combined_minari_dataset\n",
     "from training_rl.offline_rl.offline_policies.offpolicy_rendering import offpolicy_rendering\n",
+    "from training_rl.offline_rl.custom_envs.custom_envs_registration import RenderMode\n",
     "from training_rl.offline_rl.offline_trainings.policy_config_data_class import TrainedPolicyConfig\n",
     "from training_rl.offline_rl.offline_trainings.offline_training import offline_training\n",
     "import torch\n",
@@ -612,7 +613,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Suboptimal policy\n",
     "offpolicy_rendering(\n",
     "    env_or_env_name=ENV_NAME,\n",
@@ -647,7 +647,8 @@
     "    policy_name=POLICY_NAME,\n",
     "    render_mode=RenderMode.RGB_ARRAY_LIST,\n",
     "    device=\"cpu\",\n",
-    ")"
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -735,6 +736,27 @@
     "How to improve CQL?? --> change params, more data?\n",
     "???"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
