--- a/notebooks/nb_131_Minari_Overview.ipynb
+++ b/notebooks/nb_131_Minari_Overview.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Unfortunately not supported in windows (maybe mainly because of Mujoco dependency)\n",
     "\n",
-    "1 - **Intro: https://minari.farama.org/main/content/basic_usage/**\n",
+    "1 - **[Intro Minari](https://minari.farama.org/main/content/basic_usage/)**\n",
     "\n",
     "It is use to collect data given a gymnasium environment:\n",
     "\n",
