--- a/notebooks/nb_170_Offline_RL_part_II.ipynb
+++ b/notebooks/nb_170_Offline_RL_part_II.ipynb
@@ -139,7 +139,7 @@
     "It can be shown that given two policies $\\pi$ and $\\mu$ the following general result holds:\n",
     "\n",
     "$\\eta(\\pi) = \\mathbb{E}_{s \\sim d^{\\pi}(s)} \\mathbb{E}_{a \\sim \\pi(a|s)} [A^{\\mu}(s, a)] = \\mathbb{E}_{s \\sim d^{\\pi}(s)} \\mathbb{E}_{a \\sim \\pi(a|s)} \\left[ R^{\\mu}_{s,a} - V^{\\mu}(s) \\right]\n",
-    "$ (See https://arxiv.org/pdf/1502.05477.pdf)\n",
+    "$\n",
     "\n",
     "$\n",
     "\\begin{align*}\n",
@@ -148,7 +148,7 @@
     "\\end{align*}\n",
     "$\n",
     "\n",
-    "This derivation comes from the AWR offpolicy algorithm but there are slighlty different implementations like the AWAC that uses an offpolicy Q-function $Q_π$ to estimate the advantage.--> see ??"
+    "This derivation comes from the AWR offpolicy algorithm but there are slighlty different implementations like the AWAC that uses an offpolicy Q-function $Q_π$ to estimate the advantage."
    ]
   },
   {
@@ -189,8 +189,6 @@
     "produces a lower bound for Q(s,a). There are different choices of $\\mu$. If you could choose $\\mu$ as $\\pi$ but also there are other choices, but these are technical details (see ... for more details).\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "In summary, CQL employs a conservative penalty mechanism, which pushes down on high Q-values by choosing an adversarial behavior policy µ(a|s). This promotes cautious Q-value estimation, particularly for out-of-distribution actions. The chosen µ(a|s) and penalty weight α are critical factors in this process, leading to a provably conservative Q-learning or actor-critic algorithm."
    ]
   },
@@ -200,15 +198,16 @@
    "source": [
     "### References\n",
     "\n",
-    "See https://arxiv.org/pdf/1502.05477.pdf\n",
+    "[Schulman et.al. '2017 - Trust Region Policy Optimization](https://arxiv.org/pdf/1502.05477.pdf)\n",
     "\n",
-    "CQL'2020 https://arxiv.org/pdf/2006.04779.pdf\n",
+    "[Kumar et.al. '2020 - Conservative Q-Learning for Offline Reinforcement Learning](https://arxiv.org/pdf/2006.04779.pdf)\n",
     "\n",
-    "Levine\n",
+    "[ Levine et. al. '2021 - Offline Reinforcement Learning: Tutorial, Review,\n",
+    "and Perspectives on Open Problems ](https://arxiv.org/pdf/2005.01643.pdf)\n",
     "\n",
-    "Second review\n",
+    "[Peng et. al. '2019 - Simple and Scalable Off-Policy Reinforcement Learning](https://arxiv.org/abs/1910.00177)\n",
     "\n",
-    "AWR / AWAC /CQL "
+    "[Nair et.al. '2020 - AWAC: Accelerating Online Reinforcement Learning with Offline Datasets](https://arxiv.org/abs/2006.09359)\n"
    ]
   },
   {
