--- a/notebooks/nb_180_offline_rl_algorithms-Copy2.ipynb
+++ b/notebooks/nb_180_offline_rl_algorithms-Copy2.ipynb
@@ -143,9 +143,17 @@
     "collapsed": true
    },
    "source": [
-    "IQL\n",
-    "---"
+    "IMPLICIT Q-LEARNING (IQL):\n",
+    "---\n",
+    "Similar idea [paper](https://openreview.net/pdf?id=68n2s9ZJWF8)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
