--- a/notebooks/nb_120_IntroOfflineRL.ipynb
+++ b/notebooks/nb_120_IntroOfflineRL.ipynb
@@ -129,6 +129,15 @@
     "\n",
     "[Prudencio et. al. ' 2023 - A Survey on Offline Reinforcement Learning: Taxonomy, Review, and Open Problems ](https://arxiv.org/pdf/2203.01387.pdf)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
