Update and fix intro to control notebook

--- a/notebooks/nb_20_IntroductionToControl.ipynb
+++ b/notebooks/nb_20_IntroductionToControl.ipynb
@@ -66,9 +66,7 @@
     "import control as ct\n",
     "import gymnasium as gym\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotx\n",
     "import mediapy as media\n",
-    "import mujoco\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import sympy as sym\n",
@@ -136,6 +134,24 @@
     "- **Optimal Control**: deals with finding a control for a dynamical system over a period of time such that an objective function is optimized.\n",
     "- **Adaptive Control**: adapt to a controlled system with parameters which vary, or are initially uncertain.\n",
     "- **Robust Control**: an approach to controller design that explicitly deals with uncertainty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<center>\n",
+    "<figure>\n",
+    "    <img src=\"_static/images/20_control_theory_map.png\" width=\"70%\"/>\n",
+    "    <figcaption>\n",
+    "        <a href=\"https://engineeringmedia.com/map-of-control\">The Map of Control Theory</a>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "</center>"
    ]
   },
   {
@@ -430,6 +446,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1056,8 +1073,8 @@
     "Where:\n",
     "\n",
     "- $K$ is the system's gain.\n",
-    "- $a_i$ are the system's poles.\n",
-    "- $b_i$ are the system's zeros."
+    "- $a_i$ are the system's zeros.\n",
+    "- $b_i$ are the system's poles."
    ]
   },
   {
@@ -1829,7 +1846,7 @@
     "solution2_first": true
    },
    "source": [
-    "### Hint\n",
+    "## Hint\n",
     "\n",
     "Open this help if you need help with the creating the step controller."
    ]
@@ -2336,7 +2353,7 @@
     "plt.plot(response.time, response.outputs, label=\"System\")\n",
     "plt.plot(response.time, results.observations[:-1, 1], label=\"Model\")\n",
     "plt.xlabel(\"Time\")\n",
-    "plt.ylabel(\"Position\")\n",
+    "plt.ylabel(\"Angle\")\n",
     "plt.legend();"
    ]
   },
@@ -2357,7 +2374,7 @@
     "  A system is bounded-input, bounded-output stable (**BIBO** stable) if, for every bounded input, the output is finite. Mathematically, if every input satisfying\n",
     "\n",
     "    $$\n",
-    "    ||x(t)||_\\infty \\lt \\infty\n",
+    "    ||u(t)||_\\infty \\lt \\infty\n",
     "    $$\n",
     "\n",
     "    leads to an output satisfying \n",
@@ -2465,7 +2482,7 @@
     "\\mathbf{x}(t) = e^{At}\\mathbf{x}(0)\n",
     "$$\n",
     "\n",
-    "which can be rewritten as:\n",
+    "which can be rewritten using the [eigendecomposition](https://en.wikipedia.org/wiki/Eigendecomposition_of_a_matrix) as:\n",
     "\n",
     "$$\n",
     "\\mathbf{x}(t) = \\left[M e^{\\Lambda t}M^{-1}\\right] \\mathbf{x}(0)\n",
@@ -2480,7 +2497,7 @@
     "  0 & 0 & \\dots  & 0 & e^{\\lambda_n t}\\\\\n",
     "  \\end{bmatrix}$\n",
     "- $\\Lambda$ is a vector that contains the eigenvalues of $A$.\n",
-    "- $M$ is a matrix whose columns are the eigenvectors of $A$."
+    "- $M = \\begin{bmatrix}m_{ij}\\end{bmatrix}$ is a matrix whose columns are the eigenvectors of $A$."
    ]
   },
   {
@@ -2552,7 +2569,7 @@
    "source": [
     "Lambda, M = np.linalg.eig(A)\n",
     "display_array(\"\\Lambda\", Lambda)\n",
-    "display_array(\"M\", eigenvectors)"
+    "display_array(\"M\", M)"
    ]
   },
   {
@@ -2568,17 +2585,6 @@
    "source": [
     "M_1 = np.linalg.inv(M)\n",
     "display_array(\"M^{-1}\", M_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "M * sym.simplify(sym.exp(sym.Matrix(np.diag(Lambda) * t))) * M_1"
    ]
   },
   {
@@ -2733,8 +2739,7 @@
    },
    "outputs": [],
    "source": [
-    "result = np.linalg.eig(mass_spring_damper.A)\n",
-    "eigenvalues = result.eigenvalues\n",
+    "eigenvalues, _ = np.linalg.eig(mass_spring_damper.A)\n",
     "eigenvalues"
    ]
   },
@@ -2869,8 +2874,7 @@
    },
    "outputs": [],
    "source": [
-    "result = np.linalg.eig(inverted_pendulum.A)\n",
-    "eigenvalues = result.eigenvalues\n",
+    "eigenvalues, _ = np.linalg.eig(inverted_pendulum.A)\n",
     "eigenvalues"
    ]
   },
@@ -3284,9 +3288,7 @@
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
-    },
-    "solution2": "hidden",
-    "solution2_first": true
+    }
    },
    "source": [
     "## Solution"
@@ -3298,7 +3300,8 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "hidden"
+    "solution2": "hidden",
+    "solution2_first": true
    },
    "source": [
     "### Inverted Pendulum"
@@ -3883,6 +3886,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -3924,9 +3928,7 @@
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
-    },
-    "solution2": "hidden",
-    "solution2_first": true
+    }
    },
    "source": [
     "## Solution"
@@ -3938,7 +3940,8 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "hidden"
+    "solution2": "hidden",
+    "solution2_first": true
    },
    "source": [
     "### Inverted Pendulum"
@@ -4468,7 +4471,7 @@
    "outputs": [],
    "source": [
     "Kp = 1\n",
-    "Ki = 20\n",
+    "Ki = 50\n",
     "Kd = 0"
    ]
   },
@@ -4653,9 +4656,9 @@
    },
    "outputs": [],
    "source": [
-    "Kp = 600\n",
+    "Kp = 308\n",
     "Ki = 0\n",
-    "Kd = 50"
+    "Kd = 40"
    ]
   },
   {
